--- a/styles/style.css
+++ b/styles/style.css
@@ -36,13 +36,15 @@ body {
 }
 
 .nav-fill {
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-top: 5px solid #9a7b3b;
   border-bottom: 5px solid #9a7b3b;
   border-left: 5px solid #9a7b3b;
   border-right: 5px solid #9a7b3b;
   background-color: #f4e5ce;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .nav-link {
@@ -51,6 +53,8 @@ body {
   font-size: 35px;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .nav-link:hover {
@@ -59,7 +63,7 @@ body {
 
 .nav-link-empty {
   display:inline-block;
-  width: 20vw;
+  width: 26vw;
 }
 
 .logo_nav {
@@ -169,7 +173,7 @@ b {
   padding-bottom: 5px;
 }
 
-.discord-icon,.github-icon,.tumblr-icon,.ko-fi-icon {
+.facebook-icon,.twitter-icon,.discord-icon,.github-icon,.tumblr-icon,.ko-fi-icon {
   height: 50px;
   width: 50px;
 }
