--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ body {
   background-color: #f4e5ce;
   margin-left: 0px;
   margin-right: 0px;
+  list-style-type: none;
 }
 
 .nav-link {
@@ -53,8 +54,8 @@ body {
   font-size: 35px;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .nav-link:hover {
