--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,8 @@ body {
   padding-left: 0px;
   padding-right: 0px;
   max-width: 1079px;
+  margin: auto;
+  position: relative;
 }
 
 .nav-fill {
@@ -46,6 +48,10 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   list-style-type: none;
+}
+
+.nav-li {
+  display: inline-block;
 }
 
 .nav-link {
@@ -63,18 +69,53 @@ body {
 }
 
 .nav-link-empty {
-  display:inline-block;
+  display: inline-block;
   width: 26vw;
+  max-width: 350px;
 }
 
 .logo_nav {
-  position:absolute;
+  position: absolute;
+  width: 100%;
   max-width: 350px;
   height: auto;
-  top: -60px;
   margin: auto;
   left: 0;
   right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.buns {
+  list-style: none;
+  background-color: #f4e5ce;
+  border-radius: 5px;
+  width: 55px;
+  height: 55px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding-left: 8px;
+  padding-top: 10px;
+}
+
+.bun {
+  background-color: #9a7b3b;
+  height: 5px;
+  width: 40px;
+  border-radius: 100px;
+}
+
+.bun:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.buns:hover > .bun {
+  background-color: #fcb728;
+}
+
+.mobile-ul {
+  list-style: none;
 }
 
 .welcome-section {
