--- a/styles/style.css
+++ b/styles/style.css
@@ -21,8 +21,20 @@ body {
 }
 
 .banner-main {
+  position: relative;
   padding-left: 0px;
   padding-right: 0px;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  display: block;
+}
+
+.banner-main-mobile {
+  position: relative;
+  padding-left: 0px;
+  padding-right: 0px;
+  border-bottom: 3px solid #9a7b3b;
   max-width: 100%;
   height: auto;
   margin: auto;
@@ -74,7 +86,7 @@ body {
   max-width: 350px;
 }
 
-.logo_nav {
+.logo-nav {
   position: absolute;
   width: 100%;
   max-width: 350px;
@@ -86,36 +98,100 @@ body {
   bottom: 0;
 }
 
-.buns {
-  list-style: none;
-  background-color: #f4e5ce;
-  border-radius: 5px;
-  width: 55px;
-  height: 55px;
+.logo-mobile-nav {
   position: absolute;
-  top: 20px;
-  right: 20px;
-  padding-left: 8px;
-  padding-top: 10px;
+  width: 100%;
+  max-width: 36vw;
+  height: auto;
+  margin: auto;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
 }
 
-.bun {
-  background-color: #9a7b3b;
-  height: 5px;
-  width: 40px;
-  border-radius: 100px;
+nav {
+  --duration: 0.5s;
+  --easing: ease-in-out;
+  position: absolute;
+  width: 220px;
+  margin: 20px;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
-
-.bun:not(:last-child) {
-  margin-bottom: 10px;
+nav ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-
-.buns:hover > .bun {
-  background-color: #fcb728;
+nav li {
+  margin: -4px 0 0 0;
 }
-
-.mobile-ul {
-  list-style: none;
+nav a {
+  display: block;
+  text-decoration: none;
+  background: #f4e5ce;
+  transform-origin: 0 0;
+  transition: transform var(--duration) var(--easing);
+  transition-delay: var(--delay-out);
+  border-radius: 4px;
+  padding: 1em 1.52em;
+  font-family: "Legrand";
+  color: #9a7b3b;
+  font-size: 25px;
+}
+nav a:hover {
+  color: #fcb728;
+  text-decoration: none;
+}
+nav header {
+  font-family: "Legrand";
+  font-size: 25px;
+  color: #b23150;
+  display: block;
+  background: rgba(244, 229, 206, 0.9);
+  transform-origin: 0 0;
+  transition: transform var(--duration) var(--easing);
+  transition-delay: var(--delay-out);
+  border-radius: 4px;
+  padding: 1em 1.52em;
+}
+nav header span {
+  border: none;
+  background: transparent;
+  font-size: 1.5em;
+  padding: 0;
+  cursor: pointer;
+  line-height: 1;
+  float: right;
+}
+nav footer button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+  padding: calc(1em - 2px);
+  width: 100%;
+  transform-origin: 0 0;
+  transition: transform var(--duration) var(--easing);
+  transition-delay: calc(var(--duration) + (.1s * (var(--count) / 2)));
+  cursor: pointer;
+  outline: none;
+  background: #cdcdcd;
+  opacity: 0;
+}
+nav.closed a,
+nav.closed header {
+  transform: translateY(calc(var(--top) * -1)) scaleY(0.1) scaleX(0.2);
+  transition-delay: var(--delay-in);
+  color: transparent;
+}
+nav.closed footer button {
+  transition-delay: 0s;
+  transform: scaleY(0.7) scaleX(0.2);
 }
 
 .welcome-section {
