--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,11 @@
 body {
   background-image: url("../assets/images/background_body.jpg");
   background-repeat: repeat;
-  background-size: 100%;
   font-family: "Calibri";
+}
+
+body {
+  height: 100%;
 }
 
 @font-face {
@@ -193,7 +196,7 @@ nav.closed footer button {
 
 .welcome-section {
   margin-top: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
   bottom: 50px;
 }
 
@@ -224,6 +227,7 @@ nav.closed footer button {
 
 .welcome-readmore:hover {
   color: #fcb728;
+  text-decoration: none;
 }
 
 .welcome-left,.welcome-right {
@@ -278,10 +282,14 @@ b {
 }
 
 .footer {
+  position:absolute;
   padding-top: 25px;
   padding-bottom: 10px;
   margin-top: 20px;
   background-color: #685454;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
 }
 
 .social-media {
