--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 @font-face {
@@ -281,14 +281,26 @@ b {
   font-weight: normal;
 }
 
-.footer {
-  position:absolute;
+.wrapper {
+	min-height: 100%;
+	height: auto!important;
+	height: 100%;
+	margin: 0 auto $footer-height * -1;
+}
+
+.sticky {
+	height: 130px;
+}
+
+#footer {
+  height: 130px;
+}
+
+.footer-content {
   padding-top: 25px;
   padding-bottom: 10px;
-  margin-top: 20px;
+  color: white;
   background-color: #685454;
-  left: 0px;
-  bottom: 0px;
   width: 100%;
 }
 
