--- a/styles/style.css
+++ b/styles/style.css
@@ -238,6 +238,7 @@ nav.closed footer button {
   border-radius: 75px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .welcome-left {
