--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@ html {
   padding-bottom: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  transition: 0.3s;
 }
 
 .nav-link:hover {
@@ -148,6 +149,7 @@ nav a {
 nav a:hover {
   color: #fcb728;
   text-decoration: none;
+  transition: 0.3s;
 }
 nav header {
   font-family: "Legrand";
@@ -197,7 +199,7 @@ nav.closed footer button {
 }
 
 .welcome-section {
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 60px;
   bottom: 50px;
 }
@@ -230,6 +232,7 @@ nav.closed footer button {
 .welcome-readmore:hover {
   color: #fcb728;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 .welcome-left,.welcome-right {
@@ -308,11 +311,65 @@ b {
 
 .fab:hover {
   color: #ea8a8a;
+  transition: 0.3s;
 }
 
 .kofi-icon {
+  width: 100px;
+  height: auto;
   position: fixed;
   right: 0px;
   bottom: 8px;
   z-index: 1;
+}
+
+.contact-form {
+  margin-top: 100px;
+  margin-bottom: 60px;
+  bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+  background-color: #fbf7f0;
+  border-radius: 75px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+input[type=email], input[type=text], textarea {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid grey;
+  resize: none;
+  margin-bottom: 10px;
+}
+
+input[type=file] {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.title-contact {
+  font-family: "Golden-Plains";
+  color: #b23150;
+  font-size: 50px;
+}
+
+.contact-button {
+  background-color: #9a7b3b;
+  border: 1px solid #fbf7f0;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 5px;
+  margin-top: 10px;
+  color: white;
+  font-family: "Calibri";
+  font-size: 20px;
+  transition: 0.3s;
+}
+
+.contact-button:hover {
+  background-color: #fcb728;
 }
