--- a/styles/style.css
+++ b/styles/style.css
@@ -322,14 +322,14 @@ b {
   z-index: 1;
 }
 
-.contact-form, .project-list {
+.contact-form, .project-list, .about-me {
   margin-top: 100px;
   margin-bottom: 60px;
   bottom: 50px;
   padding-top: 50px;
   padding-bottom: 50px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 20px;
+  padding-right: 20px;
   background-color: #fbf7f0;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -349,7 +349,7 @@ input[type=file] {
   margin-bottom: 10px;
 }
 
-.title-contact, .title-projects {
+.title-contact, .title-projects, .title-about-me {
   font-family: "Golden-Plains";
   color: #b23150;
   font-size: 50px;
@@ -381,4 +381,8 @@ input[type=file] {
 .projects-row2 {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.about-me p {
+  text-align: justify;
 }
