--- a/styles/style.css
+++ b/styles/style.css
@@ -328,8 +328,8 @@ b {
   bottom: 50px;
   padding-top: 50px;
   padding-bottom: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
   background-color: #fbf7f0;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -385,4 +385,9 @@ input[type=file] {
 
 .about-me p {
   text-align: justify;
+}
+
+.about-me-pic {
+  float: left;
+  margin-right: 20px;
 }
