--- a/styles/style.css
+++ b/styles/style.css
@@ -391,3 +391,39 @@ input[type=file] {
   float: left;
   margin-right: 20px;
 }
+
+#buttons button {
+  background-color: #9a7b3b;
+  border: 1px solid #fbf7f0;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-right: 10px;
+  color: white;
+  font-family: "Calibri";
+  font-size: 16px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+#buttons button:hover {
+  background-color: #fcb728;
+}
+
+#buttons button.active {
+  background-color: #b23150;
+  margin-right: 20px;
+}
+
+.card-title a{
+  color: #9a7b3b;
+}
+
+.card-title a:hover {
+  color: #fcb728;
+  text-decoration: none;
+  transition: 0.3s;
+}
