--- a/styles/style.css
+++ b/styles/style.css
@@ -337,6 +337,7 @@ b {
   border-radius: 5px;
   margin-top: 10px;
   margin-right: 10px;
+  margin-bottom: 20px;
   color: white;
   font-family: "Calibri";
   font-size: 16px;
