--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -53,3 +53,8 @@ hr {
 .fa-chevron-left:hover,.fa-chevron-right:hover {
   color: #fcb728;
 }
+
+#image-gallery-caption {
+  text-align: justify;
+  margin-top: 10px;
+}
