Prey For The Gods page

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import "contact.css";
 @import "gallery.css";
 @import "projects.css";
+@import "prey-for-the-gods.css";
 
 body {
   background-image: url("../assets/images/background_body.jpg");
